--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,21 +8,18 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     strategy:
-      matrix:
-        node-version: [18.x]
     steps:
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: "18"
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: npm ci, build and test
-        run: |
-          npm ci
-          npm run build --if-present
-          npm test
+      - name: Install dependencies
+        run: npm install
+      - name: Run test command
+        run: npm test
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
