--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,21 +8,20 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - name: Use Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Node 18
+        uses: actions/setup-node@v3
         with:
-          node-version: "18"
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+          node-version: 18
       - name: Install dependencies
         run: npm install
-      - name: Run test command
-        run: npm test
-      - uses: codecov/codecov-action@v3
+      - name: Run tests and collect coverage
+        run: npm run test
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
-          verbose: true # optional (default = false)
       - uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
