--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,6 @@
 sonar.projectKey=ragi96_lottery-frontend_AYTeX_kNPEEtYf-noRFo
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/**/*.test.ts,src/**/*.test.tsx
+sonar.coverage.exclusions=src/serviceWorker.ts,src/index.tsx
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
+sonar.testExecutionReportPaths=coverage/test-report.xml
+sonar.sourceEncoding=UTF-8
