--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build
-        run: npm build
+        run: npm run build
       - name: Run tests and collect coverage
         run: npm run test:coverage
       - name: Upload coverage to Codecov
