--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
 sonar.projectKey=ragi96_lottery-frontend_AYTeX_kNPEEtYf-noRFo
+sonar.exclusions=src/**/*.test.tsx,src/**/*.test.ts
 sonar.test.inclusions=src/**/*.spec.js,src/**/*.spec.jsx,src/**/*.test.js,src/**/*.test.jsx,src/**/*.test.ts,src/**/*.test.tsx
 sonar.coverage.exclusions=src/serviceWorker.ts,src/index.tsx
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
