added home tests

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=ragi96_lottery-frontend_AYTeX_kNPEEtYf-noRFo
-sonar.sources=src
-sonar.tests=src
-sonar.coverage.exclusions=src/serviceWorker.ts,src/index.tsx,src/**/*.test.tsx,src/**/*.test.ts
+sonar.sources=./src
+sonar.tests=./src
+sonar.test.inclusions=./src/**/*.test.tsx
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
-sonar.testExecutionReportPaths=coverage/test-report.xml
+sonar.testExecutionReportPaths=reports/test-report.xml
 sonar.sourceEncoding=UTF-8
