--- a/package.json
+++ b/package.json
@@ -49,7 +49,14 @@
             "last 1 safari version"
         ]
     },
+    "jestSonar": {
+        "reportPath": "reports",
+        "reportFile": "test-report.xml",
+        "indent": 4
+    },
     "devDependencies": {
+        "jest": "^27.5.1",
+        "jest-sonar": "^0.2.12",
         "prettier": "2.8.0"
     }
 }
