try another property

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,5 @@
 sonar.projectKey=ragi96_lottery-frontend_AYTeX_kNPEEtYf-noRFo
-sonar.sources=./src
-sonar.tests=./src
-sonar.test.inclusions=./src/**/*.test.tsx
+sonar.coverage.exclusions=src/index.tsx,src/reportWebVitals.ts,src/core/constants/**/*,src/core/interfaces/**/*,src/**/*.test.tsx,src/**/*.test.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
 sonar.testExecutionReportPaths=reports/test-report.xml
 sonar.sourceEncoding=UTF-8
