--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,6 @@ jobs:
               env:
                   cache-name: cache-node-modules
               with:
-                  # npm cache files are stored in `~/.npm` on Linux/macOS
                   path: ~/.npm
                   key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
                   restore-keys: |
@@ -46,7 +45,7 @@ jobs:
                   SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
             # If you wish to fail your job when the Quality Gate is red, uncomment the
             # following lines. This would typically be used to fail a deployment.
-            - uses: sonarsource/sonarqube-quality-gate-action@master
-              timeout-minutes: 5
-              env:
-                  SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+            #- uses: sonarsource/sonarqube-quality-gate-action@master
+            #  timeout-minutes: 5
+            #  env:
+            #      SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
