--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=ragi96_lottery-frontend_AYTeX_kNPEEtYf-noRFo
-sonar.coverage.exclusions=/src/**/index.tsx,**/src/**/index.ts,/src/**/App.tsx,/src/**/App.ts,src/**/*.test.tsx
+sonar.exclusions=src/**/*.test.tsx
+sonar.coverage.exclusions=src/**/index.tsx,src/**/index.ts,/src/**/App.tsx,/src/**/App.ts,src/**/*.test.tsx
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
