--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "test:coverage": "react-scripts test --env=jsdom --watchAll=false --coverage",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "prepare": "husky install"
     },
     "eslintConfig": {
         "extends": [
@@ -50,6 +51,11 @@
         ]
     },
     "devDependencies": {
+        "husky": "^8.0.2",
+        "lint-staged": "^13.1.0",
         "prettier": "2.8.0"
+    },
+    "lint-staged": {
+        "*.{js,css,md,ts,tsx}": "prettier --write"
     }
 }
