--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@polkadot/api": "^9.10.2",
+    "@polkadot/api-contract": "^9.10.2",
+    "@polkadot/extension-dapp": "^0.44.6",
+    "@polkadot/keyring": "^10.2.1",
+    "@polkadot/networks": "^10.2.1",
+    "@polkadot/types": "^9.10.2",
+    "@polkadot/ui-keyring": "^2.9.14",
+    "@polkadot/ui-settings": "^2.9.14",
+    "@polkadot/util": "^10.2.1",
+    "@polkadot/util-crypto": "^10.2.1",
     "@react-spring/web": "^9.5.5",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,6 +24,8 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-grid-layout": "^1.3.2",
     "@types/styled-components": "^5.1.26",
+    "bn.js": "^5.2.1",
+    "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.6",
