--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-grid-layout": "^1.3.2",
     "@types/styled-components": "^5.1.26",
-    "bn.js": "^5.2.1",
-    "query-string": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.6",
@@ -75,6 +73,11 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.0"
+  },
+  "jest": {
+    "transformIgnorePatterns": [
+      "!node_modules/"
+    ]
   },
   "lint-staged": {
     "*.{js,css,md,ts,tsx}": "prettier --write"
