--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/react-grid-layout": "^1.3.2",
     "@types/styled-components": "^5.1.26",
+    "query-string": "^8.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.6",
