--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@polkadot/extension-dapp": "^0.44.6",
     "@polkadot/keyring": "^10.2.1",
     "@polkadot/networks": "^10.2.1",
+    "@polkadot/react-identicon": "^2.9.14",
     "@polkadot/types": "^9.10.2",
     "@polkadot/ui-keyring": "^2.9.14",
     "@polkadot/ui-settings": "^2.9.14",
