--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-grid-layout": "^1.3.2",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-grid-system": "^8.1.6",
     "react-redux": "^8.0.5",
