--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     ]
   },
   "lint-staged": {
-    "*.{ts,tsx}": "lint:fix",
+    "*.{ts,tsx}": "eslint --fix",
     "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
