improved coverage report

--- a/package.json
+++ b/package.json
@@ -78,6 +78,11 @@
   "jest": {
     "transformIgnorePatterns": [
       "!node_modules/"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!/node_modules/",
+      "!src/index.tsx"
     ]
   },
   "lint-staged": {
